<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KronometerActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/kro_tvRemainingTime_text"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/btnStart_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnStop"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="32dp" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:text="@string/btnStop_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="@+id/tvCount"
        android:layout_marginLeft="78dp" />

    <ImageButton
        android:id="@+id/ibGoMain"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home_blue_24px"
        android:contentDescription="@string/ibGoMain_description"
        tools:targetApi="lollipop" />

</android.support.constraint.ConstraintLayout>