<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataBaseActivity">

    <ImageButton
        android:id="@+id/ibGoMain"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ibGoMain_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home_blue_24px"
        tools:targetApi="lollipop" />

    <ListView
    android:id="@+id/lvMusicians"
    android:layout_width="368dp"
    android:layout_height="446dp"
    android:layout_marginEnd="1dp"
    android:layout_marginStart="1dp"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnAddData_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibGoMain"
        app:layout_constraintTop_toBottomOf="@+id/lvMusicians" />

    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnDeleteAll_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibGoMain"
        app:layout_constraintTop_toBottomOf="@+id/lvMusicians"
        android:layout_marginLeft="20dp" />
</android.support.constraint.ConstraintLayout>